--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,7 @@
 }
 
 .rbc-off-range-bg {
-  background-color: #8bb7ff !important;
+  background-color: #b7c0c0 !important;
 }
 
 .rbc-toolbar button:active, .rbc-toolbar button.rbc-active {
